# ticketbot

./: .editorconfig  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: docker-image.yml
cogs/: dice.py  owner.py  tickettool.py
constant/: bot_settings.py  environ.py
constant/cog/: tickettool_settings.py
util/: database.py
util/checker/: user_check.py
